--- a/iconfont/demo_unicode.html
+++ b/iconfont/demo_unicode.html
@@ -33,6 +33,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont">&#xe624;</i>
+                    <div class="name">用户</div>
+                    <div class="code">&amp;#xe624;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe66b;</i>
                     <div class="name">购物车</div>
                     <div class="code">&amp;#xe66b;</div>
