--- a/iconfont/demo_symbol.html
+++ b/iconfont/demo_symbol.html
@@ -29,6 +29,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-yonghu"></use>
+                    </svg>
+                    <div class="name">用户</div>
+                    <div class="fontclass">#icon-yonghu</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-gouwuche"></use>
                     </svg>
                     <div class="name">购物车</div>
