--- a/js/index.html
+++ b/js/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<b></b>
 					</li>
-					<li><a href="">注册</a>
+					<li><a href="register.html">注册</a>
 						<b></b>
 					</li>
 					<li><a href="">登录</a></li>
