--- a/js/index.html
+++ b/js/index.html
@@ -35,7 +35,7 @@
 					<li><a href="register.html">注册</a>
 						<b></b>
 					</li>
-					<li><a href="">登录</a></li>
+					<li><a href="login.html">登录</a></li>
 				</ul>
 			</div>
 		</div>
@@ -46,7 +46,7 @@
 				<h1><a href=""><img src="../img/logo.png"/></a></h1>
 				<input type="button" name="" id="" value="" />
 				<a href=""><i class="iconfont icon-sousuo"></i></a>
-				<input type="text" name="" id="" value="请输入要搜索的商品" />
+				<input type="text" name="" id="" placeholder="请输入要搜索的商品" />
 			</div>
 		</div>
 		<!--nav-->
