--- a/js/list-same.html
+++ b/js/list-same.html
@@ -60,18 +60,21 @@
 				</div>
 				<div id="list-classify">
 					<span>眼镜：</span>
-					<a class="classify-link" href="">眼镜</a>
+					<ul class="classify-link-father">
+						<li class="classify-link"></li>
+					</ul>
+					
 				</div>
 				<div id="list-info">
-					<p class="list-info-title">眼镜</p>
 					<ul class="shop-list">
-						<li>
+					<!--<p class="list-info-title">眼镜</p>-->
+						<!--<li>
 							<a href="">
-								<img src="../img/rBACW1lfRwuEENdZAAAAAHHWObc126.jpg" alt="" />
+								<img class="pic" src="../img/rBACW1lfRwuEENdZAAAAAHHWObc126.jpg" alt="" />
 								<p class="name">AIR超清光学镜-A</p>
 								<p class="price">￥169</p>
 							</a>
-						</li>
+						</li>-->
 					</ul>
 				</div>
 			</div>
@@ -140,21 +143,22 @@
 					</div>
 				</div>
 				<div class="down">
-					<p class="down-p1">
+					<div class="down-p1 down-p">
 						<span>Copyright © 2017, BIYAO.COM</span>
 						<span>珠海必要科技有限公司</span>
 						<span>
 							<a href="">粤公网安备44049102496139号</a>
 						</span>
-					</p>
-					<p class="down-p2">
+					</div>
+					<div class="down-p2 down-p">
 						<span>公司地址：珠海市唐家湾镇哈工大路1号1栋E301-15</span>
 						<span>公司电话：0756-3635580</span>
-					</p>
-					<p class="down-p3">必要商城提示您，产品“由某制造商出品”仅为陈述制造商既往生产经历，并不意味着相应产品与特定品牌产品相同或近似。</p>
+					</div>
+					<div class="down-p3 down-p">必要商城提示您，产品“由某制造商出品”仅为陈述制造商既往生产经历，并不意味着相应产品与特定品牌产品相同或近似。</div>
 				</div>
 			</div>
 		</div>
 	</body>
 </html>
 <script src="index.js"></script>
+<script src="list-same.js"></script>
