--- a/js/list-same.html
+++ b/js/list-same.html
@@ -61,7 +61,7 @@
 				<div id="list-classify">
 					<span>眼镜：</span>
 					<ul class="classify-link-father">
-						<li class="classify-link"></li>
+						<!--<li class="classify-link"></li>-->
 					</ul>
 					
 				</div>
