--- a/js/index.html
+++ b/js/index.html
@@ -282,11 +282,11 @@
 				<div class="category-recommend-3">
 					<div class="category-title">
 						<p>光学眼镜</p>
-						<a class="more" href="">查看全部&nbsp;></a>
+						<a class="more" href="list-same.html">查看全部&nbsp;></a>
 					</div>
 					<ul>
 						<li class="L0">
-							<a href="">
+							<a href="list-same.html">
 								<i>
 									<img src="../img/rBACW1npmXCAQ7sxAADINhXsKqg879.jpg" alt="" />
 								</i>
