--- a/js/list-same.html
+++ b/js/list-same.html
@@ -12,7 +12,7 @@
 		<div id="header">
 			<div class="header0">
 				<ul class="header-nav">
-					<li><a href="">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="">平台政策</a></li>
 					<li><a href="">商家入驻</a></li>
 				</ul>
@@ -43,18 +43,73 @@
 		<!--top-->
 		<div id="top">
 			<div class="top0">
-				<h1><a href=""><img src="../img/logo.png"/></a></h1>
+				<h1><a href="index.html"><img src="../img/logo.png"/></a></h1>
 				<input type="button" name="" id="" value="" />
 				<a href=""><i class="iconfont icon-sousuo"></i></a>
 				<input type="text" name="" id="" placeholder="请输入要搜索的商品" />
 			</div>
 		</div>
 		
+		<!--rightBar-->
+		<ul style="z-index: 20;" id="rightBar">
+			<li class="rightBar-share"></li>
+			<li class="rightBar-code">
+				<div class="code-box">
+					<span></span>
+					<dl class="code-public">
+						<dt></dt>
+						<dd>扫码关注必要公众号</dd>
+					</dl>
+					<dl class="code-app">
+						<dt></dt>
+						<dd>扫码下载必要APP</dd>
+					</dl>
+				</div>
+			</li>
+			<li class="rightBar-top"></li>
+		</ul>
+		
+		<!--分享弹框-->
+		<div id="shareCon">
+			<div id="shareCon-box">
+				<p class="share">
+					分享
+					<b class="share-off"></b>
+				</p>
+				<div class="share-con">
+					<div class="share-code">
+						<img class="code-pic" src="../img/getQRCode.jpg"/>
+						<p class="code-text">扫一扫，分享给好友！</p>
+					</div>
+					<div class="share-app">
+						<ul class="app-list">
+							<li class="app app-qq">
+								<a class="app-link" href=""><img src="../img/share_new_01_01_08.png" alt="" /></a>
+								<span class="app-name">QQ空间</span>
+							</li>
+							<li class="app app-weibo">
+								<a class="app-link" href=""><img src="../img/share_new_01_01_06.png" alt="" /></a>
+								<span class="app-name">新浪微博</span>
+							</li>
+							<li class="app app-fb">
+								<a class="app-link" href=""><img src="../img/share_new_01_01_03.png" alt="" /></a>
+								<span class="app-name">Facebook</span>
+							</li>
+							<li class="app app-Ttt">
+								<a class="app-link" href=""><img src="../img/share_new_03.png" alt="" /></a>
+								<span class="app-name">Twitter</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		<!--main-list-->
-		<div id="main-list">
+		<div id="main-list" class="clearfix">
 			<div class="main-list0">
 				<div id="list-path">
-					<a class="list-path1" href="">首页</a>
+					<a class="list-path1" href="index.html">首页</a>
 					<b class="list-pathbeacon">></b>
 					<p class="list-path2" >眼镜</p>
 				</div>
@@ -66,7 +121,7 @@
 					
 				</div>
 				<div id="list-info">
-					<ul class="shop-list">
+					<ul class="shop-list clearfix">
 					<!--<p class="list-info-title">眼镜</p>-->
 						<!--<li>
 							<a href="">
@@ -76,6 +131,7 @@
 							</a>
 						</li>-->
 					</ul>
+					<ul class="shop-list clearfix"></ul>
 				</div>
 			</div>
 		</div>
