--- a/js/list-same.html
+++ b/js/list-same.html
@@ -124,7 +124,7 @@
 					<ul class="shop-list clearfix">
 					<!--<p class="list-info-title">眼镜</p>-->
 						<!--<li>
-							<a href="">
+							<a href="page.html">
 								<img class="pic" src="../img/rBACW1lfRwuEENdZAAAAAHHWObc126.jpg" alt="" />
 								<p class="name">AIR超清光学镜-A</p>
 								<p class="price">￥169</p>
