--- a/js/page.html
+++ b/js/page.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../css/page.css"/>
 		<link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css"/>
-		<!--<script src="../public.js"></script>-->
+		<script src="../cookie.js"></script>
 		<script src="../jquery-1.11.1.min.js"></script>
 	</head>
 	<body>
